infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-client
  template:
    metadata:
      labels:
        app: todo-client
    spec:
      containers:
        - name: client
          image: manrodri/todo-client
---
apiVersion: v1
kind: Service
metadata:
  name: todo-client-srv
spec:
  selector:
    app: todo-client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 80
