infra/k8s/server-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-mongo
  template:
    metadata:
      labels:
        app: todo-mongo
    spec:
      containers:
        - name: todo-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: todo-mongo-srv
spec:
  selector:
    app: todo-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
